--- a/style/style(block).css
+++ b/style/style(block).css
@@ -1,10 +1,17 @@
+*{
+    box-sizing: border-box;
+}
+
+body{
+    margin: -4px;
+}
 .block1,.block2{
     margin: 0 auto;
     border: 1px solid black;
     display: inline-block;
     width: 49%;
     height: 3em;
-    background-color: rgba(195, 34, 9, 1)
+    background-color: rgba(12, 107, 5, 0.47);
 }
 
 .block3{
@@ -18,7 +25,7 @@
 .block4,.block5,.block6{
     display: inline-block;
     border: 1px solid green;
-    background-color: rgba(49, 8, 2, 1);
+    background-color: rgba(248, 198, 99, 1);
     margin: 20px 0 0 0;
     width: 32.5%;
     height: 150px;
@@ -27,7 +34,7 @@
     width: 24.5%;
     height: 180px;
     border: 1px solid bisque;
-    background-color:rgba(209, 196, 10, 1);
+    background-color: rgba(107, 73, 5, 1);
     display: inline-block;
 }
 .block10{
